--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
     "mongodb": "^3.1.8",
+    "mongoose": "^5.3.8",
     "session": "^0.1.0"
   }
 }
